hello-simon.yaml
# hello-simon.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-simon
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-simon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-simon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-simon
  template:
    metadata:
      labels:
        app: hello-simon
    spec:
      containers:
      - name: hello-simon
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: hello-simon
    app.kubernetes.io/instance: hello-simon    
  name: hello-simon
spec:  
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-simon
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
