route.yaml
# route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: hello-simon
    app.kubernetes.io/instance: hello-simon    
  name: hello-simon
spec:  
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-simon
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
